# data-analyst-agent

./: .gitignore  README.md  _quick_test.py  pyproject.toml  requirements.txt
app/: main.py
app/agents/: aggregator.py  coding_agent.py  format_extractor.py  llm.py  pipeline.py  task_parser.py  validator.py
app/core/: sandbox.py
app/routes/: api.py
app/utils/: images.py  logger.py
